<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 CMPUT301W18T18
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="ca.ualberta.cs.wrkify.LoginActivity">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/loginField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:hint="@string/login_username_label"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginHeader"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        app:layout_constraintRight_toRightOf="@id/loginField"
        app:layout_constraintTop_toBottomOf="@id/loginField" />

    <TextView
        android:id="@+id/loginLabelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register_caption"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintEnd_toStartOf="@id/loginButtonRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/loginButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        app:layout_constraintStart_toEndOf="@id/loginLabelRegister"
        app:layout_constraintBaseline_toBaselineOf="@id/loginLabelRegister"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
