<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 CMPUT301W18T18
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bidListItem_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:elevation="@android:dimen/notification_large_icon_width"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/bidListItem_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:text="@string/bidListItem_accept"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bidListItem_viewProfile"
            tools:text="@string/bidListItem_accept" />

        <Button
            android:id="@+id/bidListItem_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:text="Button"
            android:visibility="visible"


            app:layout_constraintEnd_toStartOf="@+id/bidListItem_accept"
            app:layout_constraintTop_toTopOf="@+id/bidListItem_accept" />

        <Button
            android:id="@+id/bidListItem_viewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:text="@string/bidListItem_viewProfile"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bidListItem_bidAmount"
            tools:text="@string/bidListItem_viewProfile" />

        <TextView
            android:id="@+id/bidListItem_taskCompleter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:text="@string/bidListItem_taskCompleter"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/bidListItem_taskCompleter" />

        <TextView
            android:id="@+id/bidListItem_bidAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bidListItem_bidAmount"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/bidListItem_taskCompleter"
            app:layout_constraintTop_toBottomOf="@+id/bidListItem_taskCompleter" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
